--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Realtors Pk</title>
-    <nav class="topnav"></nav>
+    <nav id="container" class="topnav">
+        Navbar
+    </nav>
 </head>
 <body>
-    
+    <div id="firstsection">
+        <div class="contenttitle">
+            Content
+        </div>
+    </div>
+    <div id="secondsection">
+        <div id="container" class="topviewproject">
+            Top Viewed Project
+            <div class="topviewprojecttable">
+                <div class="card">2</div>
+                <div class="card">3</div>
+                <div class="card">1</div>
+                <div class="card">5</div>
+
+
+            </div>
+        </div>
+
+    </div>
+    <div id="thirdsection">
+        <div id="container" class="moveinnow">
+            Move In Now
+            <div class="moveinnowtable">
+                <div class="card">2</div>
+                <div class="card">3</div>
+                <div class="card">1</div>
+                <div class="card">5</div>
+
+
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
