--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <button class="burgermenuebtn">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="burgermenustyle">
-                        <path stroke-linecap="round" stroke-linejoin="round"
+                            <path stroke-linecap="round" stroke-linejoin="round"
                             d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
                     </svg>
                 </button>
@@ -72,27 +72,27 @@
                     </div>
                     <div class="filter">
                         <select id="city" class="city">
-                            <option value="volvo">City</option>
-                            <option value="saab">Hangu</option>
-                            <option value="opel">Islamabad</option>
-                            <option value="audi">Murree</option>
-                            <option value="audi">Peshawar</option>
-                            <option value="audi">Rawalpindi</option>
+                            <option value="Citydefault">City</option>
+                            <option value="Hangu">Hangu</option>
+                            <option value="Islamabad">Islamabad</option>
+                            <option value="Murree">Murree</option>
+                            <option value="Peshawar">Peshawar</option>
+                            <option value="Rawalpindi">Rawalpindi</option>
                         </select>
 
                         <select id="property" class="property">
-                            <option value="volvo">Project Type</option>
-                            <option value="saab">Comercial</option>
-                            <option value="opel">Residentail</option>
-                            <option value="audi">MixUse</option>
+                            <option value="Project_typedefault">Project Type</option>
+                            <option value="Comercial">Comercial</option>
+                            <option value="Residentail">Residentail</option>
+                            <option value="MixUse">MixUse</option>
                         </select>
                         <select id="price" class="price">
-                            <option value="volvo">Price Range</option>
-                            <option value="saab">10Lac-1Cr</option>
-                            <option value="opel">30Lac-3Cr</option>
-                            <option value="audi">3Cr-6Cr</option>
+                            <option value="Price_rangedefault">Price Range</option>
+                            <option value="aklac">10Lac-1Cr</option>
+                            <option value="teenlak">30Lac-3Cr</option>
+                            <option value="teencr">3Cr-6Cr</option>
                         </select>
-                        <button onclick="firstsectionsearchbtn()" class="search">Search</button>
+                        <button onclick="firstsectionsearchbtn()"class="search"><a href="./searched.html"> Search</a></button>
                     </div>
                 </div>
 
