--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                             hidden costs.
                         </p>
                     </div>
-                    <div class="filter">
-                        <select id="city" class="city">
+                    <div class="filter" >
+                        <select id="city" class="city" >
                             <option value="Citydefault">City</option>
                             <option value="Hangu">Hangu</option>
                             <option value="Islamabad">Islamabad</option>
@@ -92,7 +92,7 @@
                             <option value="teenlak">30Lac-3Cr</option>
                             <option value="teencr">3Cr-6Cr</option>
                         </select>
-                        <button onclick="firstsectionsearchbtn()"class="search"><a href="./searched.html"> Search</a></button>
+                        <button onclick="firstsectionsearchbtn()"class="search"> Search</button>
                     </div>
                 </div>
 
