--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="topnavright">
                 <a class="active">Home<div class="underlinenav"></div></a>
-                <a class="active">Projects <div class="underlinenav"></div></a>
+                <a href="/offers.html" class="active">Projects <div class="underlinenav"></div></a>
                 <a class="active">Offers <div class="underlinenav"></div></a>
                 <a class="active">About <div class="underlinenav"></div></a>
                 <a class="active">Blogs <div class="underlinenav"></div></a>
