--- a/test.html
+++ b/test.html
@@ -7,19 +7,14 @@
     <title>Document</title>
 </head>
 <body style="display: flex; justify-content: center;">
-    <table style="max-width: 20px; border-collapse: separate;border-spacing: 25px; background: rgb(221, 221, 221);">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Location</th>
-                <th>Name</th>
-                <th>Image</th>
-            </tr>
-        </thead>
-        <tbody id="data-output" >
 
-        </tbody>
-    </table>
+        <div  id="data-output" class="card">
+    <div id="card">
+      
+        </div>
+
     <script src="test.js"></script>
+
+
 </body>
 </html>
